# ChangeLog for media-gfx/blockdiag
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Mar 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.6.7.ebuild:
  Keyworded amd64.

*blockdiag-0.7.3 (04 Mar 2011)

  04 Mar 2011; James Rowe <jnrowe@gmail.com> +blockdiag-0.7.3.ebuild:
  Version bump [300].

*blockdiag-0.7.0 (01 Mar 2011)

  01 Mar 2011; James Rowe <jnrowe@gmail.com> +blockdiag-0.7.0.ebuild:
  Version bump [291].

*blockdiag-0.6.7 (17 Feb 2011)

  17 Feb 2011; James Rowe <jnrowe@gmail.com> +blockdiag-0.6.7.ebuild:
  Version bump [275].

  10 Feb 2011; James Rowe <jnrowe@gmail.com> -blockdiag-0.5.2.ebuild,
  blockdiag-0.6.2.ebuild:
  Keyworded x86.

  10 Feb 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.6.2.ebuild:
  Keyworded amd64.

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

*blockdiag-0.6.2 (11 Jan 2011)

  11 Jan 2011; James Rowe <jnrowe@gmail.com> +blockdiag-0.6.2.ebuild:
  Version bump [244].

  06 Jan 2011; James Rowe <jnrowe@gmail.com> -blockdiag-0.5.1.ebuild,
  blockdiag-0.5.2.ebuild:
  Keyworded x86.

  05 Jan 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.5.2.ebuild:
  Keyworded amd64.

  29 Nov 2010; James Rowe <jnrowe@gmail.com> -blockdiag-0.4.ebuild,
  blockdiag-0.5.1.ebuild:
  Keyworded x86.

  28 Nov 2010; James Rowe <jnrowe@gmail.com> blockdiag-0.5.1.ebuild:
  Keyworded amd64.

*blockdiag-0.5.2 (26 Nov 2010)

  26 Nov 2010; James Rowe <jnrowe@gmail.com> +blockdiag-0.5.2.ebuild:
  Version bump [232].

  09 Nov 2010; James Rowe <jnrowe@gmail.com> -blockdiag-0.3.1.ebuild,
  blockdiag-0.4.ebuild:
  Keyworded x86.

  07 Nov 2010; James Rowe <jnrowe@gmail.com> blockdiag-0.4.ebuild:
  Keyworded amd64.

  05 Nov 2010; James Rowe <jnrowe@gmail.com> blockdiag-0.3.1.ebuild:
  Keyworded x86.

  05 Nov 2010; James Rowe <jnrowe@gmail.com> blockdiag-0.3.1.ebuild:
  Keyworded amd64.

*blockdiag-0.5.1 (29 Oct 2010)
