@@ -1,21 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST blockdiag-0.6.2.tar.gz 37482 RMD160 9aad7c9578ac75d9fdb591130afb88468ca606f5 SHA1 b32121c085f347585547adfaefc8deb3543c3398 SHA256 7e1e4e2b0341d7fd18aaf73c22d4ea60d17aa965c59b9cd152ea8537d0c3f632
 DIST blockdiag-0.6.7.tar.gz 45960 RMD160 27446b4fb697a3f0aad44a48f9bff25cc3cdebe2 SHA1 bfa0176c6e57b3905a87ab237312bd3ff6c37b6e SHA256 3525bb75460af7f4a00bc3391087d2037bd1d0f3b41c8c5a3d7853b6ac519547
 DIST blockdiag-0.7.0.tar.gz 46142 RMD160 b7b67e9d6712419ffc28fa0fa738e4152f7a0207 SHA1 b60db9b659c148bdb06fca07687d1e9b73bead38 SHA256 4cb5c5f9cc32e2c5c4dedb17518b45d5e907af0fadf8e7f4d915538760c09e41
 DIST blockdiag-0.7.3.tar.gz 46614 RMD160 bb2d2995e7d2f5d7645e674f791f8dd2bb3d0659 SHA1 abbd538c6d80e9639d4f652d9e75ab881159df8e SHA256 3311b9f3e4908c0507ad482c8e7466aa76066de5960bd78a11e340b3d04e23c3
-EBUILD blockdiag-0.6.2.ebuild 898 RMD160 b5d963a0d97cc31b8de02c2c27a26d60b61c6878 SHA1 f7afb7713c55063612d1c142cecb566dbb00f036 SHA256 cef9e84b6d0c08225379aacfa32cc6ec2a74969a1750f016e156eaf657f414da
-EBUILD blockdiag-0.6.7.ebuild 934 RMD160 7daffd3c5f4a0a495a6239e691f6b26f4eaaffc7 SHA1 fb4fd5c4b313292b80d60eda2451b08e3910d9c5 SHA256 9747396ff89ddc22e281cfe1ea885a226907df69df2cd15051abfcd40b04d2f2
+EBUILD blockdiag-0.6.7.ebuild 933 RMD160 d67a0a6789feb7142248619e8c2a5828d3b1dad4 SHA1 ff1d316877171fa75934b774db5b9fce26e1048e SHA256 5fa7f5355c08236916ee08ac1e2f607b3c1d596eb9e78b8d44ade8cfb1e813f2
 EBUILD blockdiag-0.7.0.ebuild 933 RMD160 abfe531e4c3add0c8ad6e5321fc7c3d812e77bf4 SHA1 776cfe56971dc0326c5f2d4c7520825a787cf58e SHA256 2bf0a62ed7d68fc13f0cf1df87a53d9b41322e14dfabf8c93c349f8b565514b4
 EBUILD blockdiag-0.7.3.ebuild 933 RMD160 abfe531e4c3add0c8ad6e5321fc7c3d812e77bf4 SHA1 776cfe56971dc0326c5f2d4c7520825a787cf58e SHA256 2bf0a62ed7d68fc13f0cf1df87a53d9b41322e14dfabf8c93c349f8b565514b4
-MISC ChangeLog 2487 RMD160 f6c08efc844bf69cb1e97ecde50bca0c8f6a77ce SHA1 782a4deaadeb497df5d00b80a6e5644fcfd12e3b SHA256 6988e0da4a5a4f79c6eb0dd6114ba0a8210f593a7176cc1683312eea8219c569
+MISC ChangeLog 2601 RMD160 f715da4dff6799b3664c6f73bb8276733488b0db SHA1 7d4b3e0c006c13a7c5eea0cffa9dd3359157dbdd SHA256 0d1fb5444bb438da1ca50bcacc93ca4b43a953a6b8c9004d8b8e4a5a33d7c15f
 MISC metadata.xml 669 RMD160 dcb67ada7b260b3ce4d5b5ec3f66ce2193ea2413 SHA1 22302b9b620dfb15f8c13137c866a5ac587e86e9 SHA256 24d91965daa15b89c7a8fa1e6eefaa6d459645d881cd67a1738198253cebd533
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2IqCoACgkQzJrj3cAXR0mYXQCgjIXdOKFlgQ/RgjPbPrB3ItCK
-G/4AoKIgu93ZIvjESeLjaK3hZMCxgH+D
-=Hmw8
+iEYEARECAAYFAk2JrK4ACgkQzJrj3cAXR0lWHQCeM3/7rBxny0POMhHjAZqcsueN
+DX4An2wFN7020/HeVGUnhSPWU81gLQ6B
+=gAPb
 -----END PGP SIGNATURE-----
