@@ -1,4 +1,3 @@
-* media-gfx/blockdiag-0.6.7                  x86 SCHEDULED: <2011-03-19 Sat>
 * media-gfx/sphinxcontrib-blockdiag-0.6.3    x86 SCHEDULED: <2011-03-19 Sat>
 * dev-python/termcolor-1.1.0               amd64 SCHEDULED: <2011-03-20 Sun>
 * dev-python/termcolor-1.1.0                 x86 SCHEDULED: <2011-03-20 Sun>
