@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Mar 2011; James Rowe <jnrowe@gmail.com> -blockdiag-0.6.2.ebuild,
+  blockdiag-0.6.7.ebuild:
+  Keyworded x86.
+
   22 Mar 2011; James Rowe <jnrowe@gmail.com> blockdiag-0.6.7.ebuild:
   Keyworded amd64.
 
